// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Base Button Snapshot should render with large size 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border: 0;
  border-color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border-radius: var(--magma-components-button-border-radius, var(--magma-border-radius, 8px));
  color: var(--magma-color-neutral-100, #FFFFFF);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--magma-components-button-font-family, var(--magma-body-font, "Work Sans",Helvetica,sans-serif));
  font-size: var(--magma-components-button-size-large-font-size, var(--magma-type-scale-size-04-font-size, 18px));
  font-weight: 500;
  height: var(--magma-components-button-size-large-height, var(--magma-space-scale-spacing-11, 56px));
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: var(--magma-components-button-size-large-line-height, var(--magma-type-scale-size-04-line-height, 24px));
  margin: 0;
  min-width: var(--magma-components-button-size-large-min-width, var(--magma-space-scale-spacing-13, 96px));
  overflow: hidden;
  padding: var(--magma-components-button-size-large-padding-block, var(--magma-space-scale-spacing-04, 12px)) var(--magma-components-button-size-large-padding-inline, var(--magma-space-scale-spacing-06, 24px));
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid var(--magma-components-button-focus-outline-color, var(--magma-color-focus, var(--magma-color-info-500, #0074B7)));
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: var(--magma-color-primary-600, #292F7C);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active {
  background: var(--magma-color-primary-700, #1A1E51);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border: 0;
  border-color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border-radius: var(--magma-components-button-border-radius, var(--magma-border-radius, 8px));
  color: var(--magma-color-neutral-100, #FFFFFF);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--magma-components-button-font-family, var(--magma-body-font, "Work Sans",Helvetica,sans-serif));
  font-size: var(--magma-components-button-size-large-font-size, var(--magma-type-scale-size-04-font-size, 18px));
  font-weight: 500;
  height: var(--magma-components-button-size-large-height, var(--magma-space-scale-spacing-11, 56px));
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: var(--magma-components-button-size-large-line-height, var(--magma-type-scale-size-04-line-height, 24px));
  margin: 0;
  min-width: var(--magma-components-button-size-large-min-width, var(--magma-space-scale-spacing-13, 96px));
  overflow: hidden;
  padding: var(--magma-components-button-size-large-padding-block, var(--magma-space-scale-spacing-04, 12px)) var(--magma-components-button-size-large-padding-inline, var(--magma-space-scale-spacing-06, 24px));
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid var(--magma-components-button-focus-outline-color, var(--magma-color-focus, var(--magma-color-info-500, #0074B7)));
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: var(--magma-color-primary-600, #292F7C);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active {
  background: var(--magma-color-primary-700, #1A1E51);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    id="testId"
    shape="fill"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with small size 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border: 0;
  border-color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border-radius: var(--magma-components-button-border-radius, var(--magma-border-radius, 8px));
  color: var(--magma-color-neutral-100, #FFFFFF);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--magma-components-button-font-family, var(--magma-body-font, "Work Sans",Helvetica,sans-serif));
  font-size: var(--magma-components-button-size-small-font-size, var(--magma-type-scale-size-01-font-size, 12px));
  font-weight: 500;
  height: var(--magma-components-button-size-small-height, var(--magma-space-scale-spacing-07, 28px));
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: var(--magma-components-button-size-small-letter-spacing, var(--magma-type-scale-size-01-letter-spacing, .32px));
  line-height: var(--magma-components-button-size-small-line-height, var(--magma-type-scale-size-01-line-height, 16px));
  margin: 0;
  min-width: var(--magma-components-button-size-small-min-width, 0px);
  overflow: hidden;
  padding: var(--magma-components-button-size-small-padding-block, var(--magma-space-scale-spacing-02, 4px)) var(--magma-components-button-size-small-padding-inline, var(--magma-space-scale-spacing-03, 8px));
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid var(--magma-components-button-focus-outline-color, var(--magma-color-focus, var(--magma-color-info-500, #0074B7)));
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: var(--magma-color-primary-600, #292F7C);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active {
  background: var(--magma-color-primary-700, #1A1E51);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border: 0;
  border-color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border-radius: var(--magma-components-button-border-radius, var(--magma-border-radius, 8px));
  color: var(--magma-color-neutral-100, #FFFFFF);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--magma-components-button-font-family, var(--magma-body-font, "Work Sans",Helvetica,sans-serif));
  font-size: var(--magma-components-button-size-small-font-size, var(--magma-type-scale-size-01-font-size, 12px));
  font-weight: 500;
  height: var(--magma-components-button-size-small-height, var(--magma-space-scale-spacing-07, 28px));
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: var(--magma-components-button-size-small-letter-spacing, var(--magma-type-scale-size-01-letter-spacing, .32px));
  line-height: var(--magma-components-button-size-small-line-height, var(--magma-type-scale-size-01-line-height, 16px));
  margin: 0;
  min-width: var(--magma-components-button-size-small-min-width, 0px);
  overflow: hidden;
  padding: var(--magma-components-button-size-small-padding-block, var(--magma-space-scale-spacing-02, 4px)) var(--magma-components-button-size-small-padding-inline, var(--magma-space-scale-spacing-03, 8px));
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid var(--magma-components-button-focus-outline-color, var(--magma-color-focus, var(--magma-color-info-500, #0074B7)));
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: var(--magma-color-primary-600, #292F7C);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active {
  background: var(--magma-color-primary-700, #1A1E51);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    id="testId"
    shape="fill"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated color 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--magma-color-neutral-100, #FFFFFF);
  border: 1px solid;
  border-color: var(--magma-color-primary-300, #8B91DA);
  border-radius: var(--magma-components-button-border-radius, var(--magma-border-radius, 8px));
  color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--magma-components-button-font-family, var(--magma-body-font, "Work Sans",Helvetica,sans-serif));
  font-size: var(--magma-components-button-size-medium-font-size, var(--magma-type-scale-size-03-font-size, 16px));
  font-weight: 500;
  height: var(--magma-components-button-size-medium-height, var(--magma-space-scale-spacing-09, 40px));
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: var(--magma-components-button-size-medium-line-height, var(--magma-type-scale-size-03-line-height, 24px));
  margin: 0;
  min-width: var(--magma-components-button-size-medium-min-width, var(--magma-space-scale-spacing-13, 96px));
  overflow: hidden;
  padding: var(--magma-components-button-size-medium-padding-block, var(--magma-space-scale-spacing-04, 12px)) var(--magma-components-button-size-medium-padding-inline, var(--magma-space-scale-spacing-05, 16px));
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid var(--magma-components-button-focus-outline-color, var(--magma-color-focus, var(--magma-color-info-500, #0074B7)));
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: var(--magma-color-primary-100, #E8E9F8);
  color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
}

.emotion-0:not(:disabled):active {
  background: var(--magma-color-primary-200, #BABDE9);
  color: var(--magma-color-primary-600, #292F7C);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--magma-color-neutral-100, #FFFFFF);
  border: 1px solid;
  border-color: var(--magma-color-primary-300, #8B91DA);
  border-radius: var(--magma-components-button-border-radius, var(--magma-border-radius, 8px));
  color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--magma-components-button-font-family, var(--magma-body-font, "Work Sans",Helvetica,sans-serif));
  font-size: var(--magma-components-button-size-medium-font-size, var(--magma-type-scale-size-03-font-size, 16px));
  font-weight: 500;
  height: var(--magma-components-button-size-medium-height, var(--magma-space-scale-spacing-09, 40px));
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: var(--magma-components-button-size-medium-line-height, var(--magma-type-scale-size-03-line-height, 24px));
  margin: 0;
  min-width: var(--magma-components-button-size-medium-min-width, var(--magma-space-scale-spacing-13, 96px));
  overflow: hidden;
  padding: var(--magma-components-button-size-medium-padding-block, var(--magma-space-scale-spacing-04, 12px)) var(--magma-components-button-size-medium-padding-inline, var(--magma-space-scale-spacing-05, 16px));
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid var(--magma-components-button-focus-outline-color, var(--magma-color-focus, var(--magma-color-info-500, #0074B7)));
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: var(--magma-color-primary-100, #E8E9F8);
  color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
}

.emotion-0:not(:disabled):active {
  background: var(--magma-color-primary-200, #BABDE9);
  color: var(--magma-color-primary-600, #292F7C);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="secondary"
    id="testId"
    shape="fill"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated shape 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border: 0;
  border-color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border-radius: 2rem;
  color: var(--magma-color-neutral-100, #FFFFFF);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--magma-components-button-font-family, var(--magma-body-font, "Work Sans",Helvetica,sans-serif));
  font-size: var(--magma-components-button-size-medium-font-size, var(--magma-type-scale-size-03-font-size, 16px));
  font-weight: 500;
  height: var(--magma-components-button-size-medium-height, var(--magma-space-scale-spacing-09, 40px));
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: var(--magma-components-button-size-medium-line-height, var(--magma-type-scale-size-03-line-height, 24px));
  margin: 0;
  min-width: var(--magma-components-button-size-medium-min-width, var(--magma-space-scale-spacing-13, 96px));
  overflow: hidden;
  padding: var(--magma-components-button-size-medium-padding-block, var(--magma-space-scale-spacing-04, 12px)) var(--magma-components-button-size-medium-padding-inline, var(--magma-space-scale-spacing-05, 16px));
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid var(--magma-components-button-focus-outline-color, var(--magma-color-focus, var(--magma-color-info-500, #0074B7)));
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: var(--magma-color-primary-600, #292F7C);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active {
  background: var(--magma-color-primary-700, #1A1E51);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border: 0;
  border-color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border-radius: 2rem;
  color: var(--magma-color-neutral-100, #FFFFFF);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--magma-components-button-font-family, var(--magma-body-font, "Work Sans",Helvetica,sans-serif));
  font-size: var(--magma-components-button-size-medium-font-size, var(--magma-type-scale-size-03-font-size, 16px));
  font-weight: 500;
  height: var(--magma-components-button-size-medium-height, var(--magma-space-scale-spacing-09, 40px));
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: var(--magma-components-button-size-medium-line-height, var(--magma-type-scale-size-03-line-height, 24px));
  margin: 0;
  min-width: var(--magma-components-button-size-medium-min-width, var(--magma-space-scale-spacing-13, 96px));
  overflow: hidden;
  padding: var(--magma-components-button-size-medium-padding-block, var(--magma-space-scale-spacing-04, 12px)) var(--magma-components-button-size-medium-padding-inline, var(--magma-space-scale-spacing-05, 16px));
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid var(--magma-components-button-focus-outline-color, var(--magma-color-focus, var(--magma-color-info-500, #0074B7)));
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: var(--magma-color-primary-600, #292F7C);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active {
  background: var(--magma-color-primary-700, #1A1E51);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    id="testId"
    shape="round"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated textTransform 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border: 0;
  border-color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border-radius: var(--magma-components-button-border-radius, var(--magma-border-radius, 8px));
  color: var(--magma-color-neutral-100, #FFFFFF);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--magma-components-button-font-family, var(--magma-body-font, "Work Sans",Helvetica,sans-serif));
  font-size: var(--magma-components-button-size-medium-font-size, var(--magma-type-scale-size-03-font-size, 16px));
  font-weight: 500;
  height: var(--magma-components-button-size-medium-height, var(--magma-space-scale-spacing-09, 40px));
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: var(--magma-components-button-size-medium-line-height, var(--magma-type-scale-size-03-line-height, 24px));
  margin: 0;
  min-width: var(--magma-components-button-size-medium-min-width, var(--magma-space-scale-spacing-13, 96px));
  overflow: hidden;
  padding: var(--magma-components-button-size-medium-padding-block, var(--magma-space-scale-spacing-04, 12px)) var(--magma-components-button-size-medium-padding-inline, var(--magma-space-scale-spacing-05, 16px));
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid var(--magma-components-button-focus-outline-color, var(--magma-color-focus, var(--magma-color-info-500, #0074B7)));
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: var(--magma-color-primary-600, #292F7C);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active {
  background: var(--magma-color-primary-700, #1A1E51);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border: 0;
  border-color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border-radius: var(--magma-components-button-border-radius, var(--magma-border-radius, 8px));
  color: var(--magma-color-neutral-100, #FFFFFF);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--magma-components-button-font-family, var(--magma-body-font, "Work Sans",Helvetica,sans-serif));
  font-size: var(--magma-components-button-size-medium-font-size, var(--magma-type-scale-size-03-font-size, 16px));
  font-weight: 500;
  height: var(--magma-components-button-size-medium-height, var(--magma-space-scale-spacing-09, 40px));
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: var(--magma-components-button-size-medium-line-height, var(--magma-type-scale-size-03-line-height, 24px));
  margin: 0;
  min-width: var(--magma-components-button-size-medium-min-width, var(--magma-space-scale-spacing-13, 96px));
  overflow: hidden;
  padding: var(--magma-components-button-size-medium-padding-block, var(--magma-space-scale-spacing-04, 12px)) var(--magma-components-button-size-medium-padding-inline, var(--magma-space-scale-spacing-05, 16px));
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid var(--magma-components-button-focus-outline-color, var(--magma-color-focus, var(--magma-color-info-500, #0074B7)));
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: var(--magma-color-primary-600, #292F7C);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active {
  background: var(--magma-color-primary-700, #1A1E51);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    id="testId"
    shape="fill"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated variant 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border: 0;
  border-color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border-radius: var(--magma-components-button-border-radius, var(--magma-border-radius, 8px));
  color: var(--magma-color-neutral-100, #FFFFFF);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--magma-components-button-font-family, var(--magma-body-font, "Work Sans",Helvetica,sans-serif));
  font-size: var(--magma-components-button-size-medium-font-size, var(--magma-type-scale-size-03-font-size, 16px));
  font-weight: 500;
  height: var(--magma-components-button-size-medium-height, var(--magma-space-scale-spacing-09, 40px));
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: var(--magma-components-button-size-medium-line-height, var(--magma-type-scale-size-03-line-height, 24px));
  margin: 0;
  min-width: var(--magma-components-button-size-medium-min-width, var(--magma-space-scale-spacing-13, 96px));
  overflow: hidden;
  padding: var(--magma-components-button-size-medium-padding-block, var(--magma-space-scale-spacing-04, 12px)) var(--magma-components-button-size-medium-padding-inline, var(--magma-space-scale-spacing-05, 16px));
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid var(--magma-components-button-focus-outline-color, var(--magma-color-focus, var(--magma-color-info-500, #0074B7)));
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: var(--magma-color-primary-600, #292F7C);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active {
  background: var(--magma-color-primary-700, #1A1E51);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border: 0;
  border-color: var(--magma-color-primary, var(--magma-color-primary-500, #3942B0));
  border-radius: var(--magma-components-button-border-radius, var(--magma-border-radius, 8px));
  color: var(--magma-color-neutral-100, #FFFFFF);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--magma-components-button-font-family, var(--magma-body-font, "Work Sans",Helvetica,sans-serif));
  font-size: var(--magma-components-button-size-medium-font-size, var(--magma-type-scale-size-03-font-size, 16px));
  font-weight: 500;
  height: var(--magma-components-button-size-medium-height, var(--magma-space-scale-spacing-09, 40px));
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: var(--magma-components-button-size-medium-line-height, var(--magma-type-scale-size-03-line-height, 24px));
  margin: 0;
  min-width: var(--magma-components-button-size-medium-min-width, var(--magma-space-scale-spacing-13, 96px));
  overflow: hidden;
  padding: var(--magma-components-button-size-medium-padding-block, var(--magma-space-scale-spacing-04, 12px)) var(--magma-components-button-size-medium-padding-inline, var(--magma-space-scale-spacing-05, 16px));
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid var(--magma-components-button-focus-outline-color, var(--magma-color-focus, var(--magma-color-info-500, #0074B7)));
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: var(--magma-color-primary-600, #292F7C);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active {
  background: var(--magma-color-primary-700, #1A1E51);
  color: var(--magma-color-neutral-100, #FFFFFF);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    id="testId"
    shape="fill"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;
